# CLAMS

./: .gitattributes  .gitignore  .gitmodules  CLAMS-slides.qmd  CLAMS.Rproj  CLAMS.bib  CONTRIBUTING.md  LICENSE  README.Rmd  README.md  README.qmd  set_pico_envars  size.sh
Arduino/: 1BasePackages.sh  1RecreateDistrobox.sh  2CommandLineSetup.sh  4LinuxDeps.sh  99-pico.rules  WSLBasePackages.sh  bash_aliases  bashrc  distrobox.ini  install-arduino-ide.sh  start-arduino-ide.sh  zshrc
CLAMS-Dev-Env/: 4LinuxDeps.sh  distrobox.ini
CLAMS-DevEnv/: 2CommandLineSetup.sh  4LinuxDeps.sh  6MicroPython.sh  BuildExamples.sh  BuildRP2040Examples.sh  BuildRP2350Examples.sh  distrobox.ini  list-uf2-files.sh  set_pico_envars
CLAMS-Distrobox/: 00Create-CLAMS-Distrobox.sh  10NuttX-Space.sh  15Install-Tools-Podman.log.REMOVED.git-id  15Install-Tools-Podman.sh  host-open-ttys.sh  set_pico_envars
CLAMS-Forth/: CLAMS-Forth.S  CLAMS-Forth.c  CMakeLists.txt  DataSegment.S  DictMacros.S  Dictionary.S  Forth-VM.S  MacroDefs.S  Macros.S  ParamStack.S  StackTesting.C  Symbol-Defs.S  SymbolDefs.S  Terminal.S  TextInterpreter.S  UserVars.S  VirtMachMacros.S  Wrappers.c  debug-probe-notes.txt  flash-uf2.sh  minicom1.sh  next-steps.txt  run-host.sh  start-debug-session.sh  start-minicom.sh  todo.txt
CLAMS-PlatformIO/: 1RecreateDistrobox.sh  4ArduinoCLI.sh  4LinuxDeps.sh  5ArduinoCLI.sh  5ArduinoPicoGit.sh  README.md  distrobox.ini  edit-me-then-run-4-git-config.sh  host-nuke-distrobox.sh  vimrc  zshrc
CLAMS-Quarto-Blog/: _quarto.yml  index.qmd
CLAMS-Quarto-Site/: CLAMS.bib  _quarto.yml  about.qmd  index.qmd
CLAMS-devel/: edit_me_then_run_4_git_config.sh  set_pico_envars
CLAMS-distrobox/: .gitignore  00create-and-enter-distrobox.sh  10command-line.sh  10vscode.sh  14NuttX.sh  16openocd.sh  20pico-toolchain.sh  22NuttX.sh  30pico-w-nsh-build.sh  supported-configurations.txt  vscode.sh
CLAMS-dtc/: CLAMS-dtc.S  CMakeLists.txt  DataSegment.S  Dictionary.S  Stacks.S  SymbolDefs.S  openocd-server.sh
CLAMS-eForth/: .gitignore  CLAMS-Forth.S  CMakeLists.txt  SymbolDefs.S
CLAMS-itc/: CLAMS-itc.S  CMakeLists.txt  Dictionary.S  Stacks.S  SymbolDefs.S  minicom0.sh
CLAMS-stc/: .gitignore  CLAMS-stc.S  CMakeLists.txt  Dictionary.S  MacroDefs.S  ParamStack.S  SymbolDefs.S  Terminal.S  UserVars.S  make-release.sh
CLAMS-website/: About-CLAMS16.qmd  (+7 more)
CLAMS16/: .gitignore  About-CLAMS16.qmd  CLAMS16.S  CMakeLists.txt  flash-uf2.sh  make-binaries.sh  make-uf2.sh  start-openocd-server.sh  start-openocd.sh
Forth-stc-incomplete/: CMakeLists.txt  Dictionary.S  UserVars.S
(+517 files in other folders)
